@@ -18,6 +18,7 @@ my $build = Module::Build->new(
         'HTTP::Headers'                     => 1.59,
         'HTTP::Request'                     => 0,
         'HTTP::Response'                    => 0,
+        'HTTP::Request::AsCGI'              => 0,
         'LWP::UserAgent'                    => 0,
         'MIME::Types'                       => 0,
         'Module::Pluggable::Fast'           => 0.16,
@@ -32,8 +33,11 @@ my $build = Module::Build->new(
         'Tree::Simple::Visitor::FindByPath' => 0,
         'URI'                               => 1.35,
     },
-    recommends =>
-      { 'Catalyst::Engine::Apache' => '1.00', FCGI => 0, 'FCGI::ProcManager' => 0 },
+    recommends => {
+        'Catalyst::Engine::Apache' => '1.00',
+        FCGI                       => 0,
+        'FCGI::ProcManager'        => 0
+    },
     create_makefile_pl => 'passthrough',
     create_readme      => 1,
     script_files       => [ glob('script/*') ],
